@@ -1,3 +1,12 @@
+2001-06-21  eric melski  <ericm@ajubasolutions.com>
+
+	* tree.tcl: Corrected keyboard navigation so that open/close
+	commands are invoked when right/left arrows are used to open/close
+	nodes, patch from [Bug #435097].  Also corrected keyboard
+	navigation on right arrow press; previously only opened closed
+	nodes that had children, but should always open nodes, regardless
+	of whether it has children.
+
 2001-06-11  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* pkgIndex.tcl: bumped version to 1.3.1 and added Tk 8.1.1 package
